# opencc_srt

./: .gitignore  pyproject.toml  srtchconv.py
